# wfupdate

./: .gitignore  CANHAZCLI.md  CONFIG.md  Cargo.toml  LAUNCHERPROTOCOL.md  README.md
src/: cli.yml  config.rs  logparser.rs  main.rs  paths.rs  run.rs  wine.rs
src/cli/: config.rs  mod.rs  repair.rs  run.rs  update.rs  wine.rs
src/exeupdate/: checker.rs  downloader.rs  mod.rs  parser.rs  update.rs
src/paths/: mod.rs  wine.rs
