[package]
authors = ["Zeke Sonxx <zeke@zekesonxx.com>"]
name = "wfupdate"
publish = false
version = "0.1.0"

[dependencies]
bytesize = "0.1.1"
hex = "0.2.0"
hyper = "0.9.10"
lazy_static = "0.2.1"
lzma = "0.2.2"
rand = "0.3.14"
regex = "0.1.73"
rust-crypto = "0.2.36"
rust-ini = "0.9.9"
users = "0.5.2"
xdg = "2.0.0"
time = "0.1"

[dependencies.clap]
default-features = false
features = ["color", "yaml"]
version = "2.15"

[dependencies.encoding]
version = "0.2.33"
#features = ["no-optimized-legacy-encoding"]
